--- a/index.html
+++ b/index.html
@@ -1067,10 +1067,10 @@
       <!--==== End of blog ===== -->
 
       <!--==== Start of contact ===== -->
-      <section id="contact" class="p-5">
+      <section id="contact" class="py-5 p-md-5">
         <div class="container pt-5">
           <main class="bg-white shadow py-3 py-md-0">
-            <div class="row">
+            <div class="row gy-3">
               <div class="col-12 col-md-6">
                 <div class="py-2 px-4 p-md-0 ps-md-5 py-md-5">
                   <div class="header mb-4">
@@ -1178,8 +1178,8 @@
         <article
           class="text-white p-4 d-flex flex-column align-items-center justify-content-center"
         >
-          <h2 class="h6 mb-2">© Copyright DevFolio. All Rights Reserved</h2>
-          <h2 class="h6 m-0">Designed by BootstrapMade</h2>
+          <h2 class="h6 mb-2 text-center">© Copyright DevFolio. All Rights Reserved</h2>
+          <h2 class="h6 m-0 text-center">Designed by BootstrapMade</h2>
         </article>
       </div>
     </footer>
